--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -403,6 +403,20 @@
                 <span class="d-none d-sm-inline"
                       i18n>&nbsp;Ergebnisse (CSV)</span>
             </button>
+
+            <!-- Tasks Pagination -->
+            <div class="navigation">
+                <pagination [boundaryLinks]="true"
+                            [itemsPerPage]="storage.tasksPerPage"
+                            [maxSize]="10"
+                            [totalItems]="storage.tasksCountTotal"
+                            (pageChanged)="tasksPageChanged($event)"
+                            previousText="&lsaquo;"
+                            nextText="&rsaquo;"
+                            firstText="&laquo;"
+                            lastText="&raquo;">
+                </pagination>
+            </div>
         </div>
     </div>
 </main>
