update form function, unique html id

--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -98,7 +98,8 @@
 
                     <!-- tags -->
                     <power-tagbox [(tagList)]="tagList"
-                                  [dataList]="storage.tagList"></power-tagbox>
+                                  [dataList]="storage.tagList"
+                                  tagboxLabel="Tags"></power-tagbox>
 
                     <button type="submit"
                             class="d-none"
