--- a/power/src/app/fragebogen/details/shareform/shareform.component.html
+++ b/power/src/app/fragebogen/details/shareform/shareform.component.html
@@ -46,22 +46,21 @@
                       aria-label="Einstellungen zum teilen eines Formulars"
                       onsubmit="return false;">
 
-                    <!-- owners -->
-                    <power-tagbox [(tagList)]="ownerList"
-                                    [dataList]="storage.form?.owners"
-                                    label="Besitzer"
-                                    list="owners"></power-tagbox>
                     <!-- tags -->
-                    <power-tagbox [(tagList)]="tagList"
-                                  [dataList]="storage.form?.tags"
-                                  label="Tags"
-                                  list="tags"></power-tagbox>
-
+                    <power-tagbox [tagList]="storage.form?.tags"
+                                    (tagListChange)="storage.form.tags = $event"
+                                    [dataList]="storage.form?.tags"
+                                    i18n-tagboxLabel tagboxLabel="Tags"></power-tagbox>
+                    <!-- owners -->
+                    <power-tagbox [tagList]="storage.form?.owners"
+                                    (tagListChange)="storage.form.owners = $event"
+                                    [dataList]="storage.form?.owners"
+                                    i18n-tagboxLabel tagboxLabel="Besitzer"></power-tagbox>
                     <!-- readers -->
-                    <power-tagbox [(tagList)]="readerList"
-                                  [dataList]="storage.form?.readers"
-                                  label="Leseberechtigte"
-                                  list="readers"></power-tagbox>
+                    <power-tagbox [tagList]="storage.form?.readers"
+                                    (tagListChange)="storage.form.tags = $event"
+                                    [dataList]="storage.form?.readers"
+                                    i18n-tagboxLabel tagboxLabel="Leseberechtigte"></power-tagbox>
                     
                     <button type="submit"
                             class="d-none"
@@ -77,7 +76,7 @@
                         class="btn btn-success"
                         i18n-title
                         title="Formular teilen"
-                        (click)="saveSettings()">
+                        (click)="updateForm()">
                     <svg width="1em"
                         height="1em"
                         viewBox="0 0 16 16"
