fixed null tags,owners,readers

--- a/power/src/app/shared/tagbox/tagbox.component.html
+++ b/power/src/app/shared/tagbox/tagbox.component.html
@@ -1,5 +1,5 @@
 <!-- tags -->
-<div class="form-group mb-0">
+<div class="form-group">
     <label for="formtag-{{ uniqId }}">{{ tagboxLabel }}</label>
     <input type="text"
            [attr.list]="'datalist-' + uniqId"
