shareformComponent to settingsComponent

--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -157,7 +157,7 @@
                     class="btn btn-primary btn-sm mr-2"
                     i18n-title
                     title="Formular teilen"
-                    (click)="shareform.open()">
+                    (click)="settings.open()">
                   <svg width="1em"
                     height="1em"
                     viewBox="0 0 16 16"
@@ -457,4 +457,4 @@
 </power-forms-surveyjs-preview>
 
 <!-- share form modal -->
-<power-forms-details-shareform #shareform></power-forms-details-shareform>
+<power-forms-details-settings #settings></power-forms-details-settings>
