--- a/power/src/app/fragebogen/details/settings/settings.component.html
+++ b/power/src/app/fragebogen/details/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div bsModal
-     #modalshareform="bs-modal"
+     #modalsettings="bs-modal"
      class="modal fade"
      tabindex="-1"
      role="dialog"
@@ -41,7 +41,7 @@
             <!-- modal body -->
             <div class="modal-body">
                 <!-- generate form -->
-                <form #shareForm="ngForm"
+                <form #settings="ngForm"
                       i18n-aria-label
                       aria-label="Einstellungen zum teilen eines Formulars"
                       onsubmit="return false;">
