--- a/power/src/app/shared/tagbox/tagbox.component.html
+++ b/power/src/app/shared/tagbox/tagbox.component.html
@@ -19,18 +19,18 @@
     </datalist>
 
     <div>
-        <span class="badge badge-primary mr-1"
-              *ngFor="let tag of tagList; index as i"
-              title="{{ tag }}">
-            {{ tag }}
-
-            <button type="button"
-                    class="close ml-1"
-                    i18n-title
-                    title="Löschen"
-                    (click)="removeTag(i)">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </span>
+        <div [attr.class]="displayBlock ? 'd-block' : 'd-inline'" *ngFor="let tag of tagList; index as i" title="{{ tag }}">
+            <span class="badge badge-primary mr-1">
+                {{ tag }}
+    
+                <button type="button"
+                        class="close ml-1"
+                        i18n-title
+                        title="Löschen"
+                        (click)="removeTag(i)">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </span>
+        </div>
     </div>
 </div>
