--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -138,9 +138,9 @@
                             </ng-container>
                             <span
                                 style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;"
-                                [style.background-color]="getSeriesColor(subitem)"
+                                [style.background-color]="nipixRuntime.formatter.getSeriesColor(subitem)"
                                 *ngIf="select['type'] == 'single'"></span>
-                            {{ getSeriesLabel(subitem) }}
+                            {{ nipixRuntime.formatter.getSeriesLabel(subitem) }}
                         </li>
                     </ul>
 
