Fix linter and test warnings

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -96,9 +96,7 @@
                        role="button"
                        data-toggle="dropdown"
                        aria-haspopup="true"
-                       aria-expanded="false"
-                       (click)="isCollapsedAcc = !isCollapsedAcc"
-                       [attr.aria-expanded]="!isCollapsedAcc">
+                       (click)="isCollapsedAcc = !isCollapsedAcc">
                         <svg width="1.5em"
                              height="1.5em"
                              viewBox="0 0 16 16"
