--- a/power/src/app/shared/modalmini/modalmini.component.html
+++ b/power/src/app/shared/modalmini/modalmini.component.html
@@ -8,7 +8,7 @@
      [attr.aria-hidden]="!isOpen"
      [attr.aria-label]="title"
      (onHide)="close()">
-    <div class="modal-dialog"
+    <div class="modal-dialog modal-lg"
          role="document"
          cdkTrapFocus>
         <div class="modal-content">
