--- a/power/src/app/shared/tagbox/tagbox.component.html
+++ b/power/src/app/shared/tagbox/tagbox.component.html
@@ -20,10 +20,11 @@
 
     <div>
         <div [attr.class]="displayBlock ? 'd-block' : 'd-inline'"
-            *ngFor="let tag of tagList; index as i" title="{{ tag }}">
+             *ngFor="let tag of tagList; index as i"
+             title="{{ tag }}">
             <span class="badge badge-primary mr-1">
                 {{ tag }}
-    
+
                 <button type="button"
                         class="close ml-1"
                         i18n-title
