--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -105,16 +105,34 @@
             class="btn btn-danger btn-sm mr-2"
             title="Bedingung entfernen"
             (click)="ConditionDel()">
-        <i class="fas fa-minus fa-fw"
-           aria-hidden="true"></i>
+        <svg width="1em"
+             height="1em"
+             viewBox="0 0 16 16"
+             class="bi bi-dash align-baseline"
+             fill="currentColor"
+             xmlns="http://www.w3.org/2000/svg"
+             aria-hidden="true">
+            <path fill-rule="evenodd"
+                  d="M3.5 8a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.5-.5z" />
+        </svg>
         <span class="sr-only">Bedingung entfernen</span>
     </button>
     <button type="button"
             class="btn btn-success btn-sm"
             title="Bedingung hinzufügen"
             (click)="ConditionAdd()">
-        <i class="fas fa-plus fa-fw"
-           aria-hidden="true"></i>
+        <svg width="1em"
+             height="1em"
+             viewBox="0 0 16 16"
+             class="bi bi-plus align-baseline"
+             fill="currentColor"
+             xmlns="http://www.w3.org/2000/svg"
+             aria-hidden="true">
+            <path fill-rule="evenodd"
+                  d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z" />
+            <path fill-rule="evenodd"
+                  d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z" />
+        </svg>
         <span class="sr-only">Bedingung hinzufügen</span>
     </button>
 </div>
