--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -72,6 +72,7 @@
                    class="sr-only">Wert oder Variabel %7Be1%7D</label>
             <input type="text"
                    class="form-control"
+                   [attr.list]="'conditionlist-' + uniqId"
                    [(ngModel)]="item.value"
                    (change)="modelChanged($event)"
                    *ngIf="!(item.operator === 'anyof' || item.operator === 'allof')"
@@ -81,6 +82,22 @@
                    placeholder="Wert oder Variabel {e1}"
                    maxlength="200"
                    required>
+
+            <datalist id="{{ 'conditionlist-' + uniqId }}">
+                <option *ngFor="let question of questions; index as j"
+                        value="{{ '&#123;' + question.name + '&#125;'  }}">
+                    {{ question.title }}
+                </option>
+                <option *ngFor="let variable of storage.model.calculatedValues; index as j"
+                        value="{{ '&#123;' + variable.name + '&#125;' }}"></option>
+                <option value="{item}"></option>
+                <option value="{pageno}"></option>
+                <option value="{pagecount}"></option>
+                <option value="{locale}"></option>
+                <option value="{correctedanswers}"></option>
+                <option value="{incorrectedanswers}"></option>
+                <option value="{questioncount}"></option>
+            </datalist>
 
             <select multiple
                     class="custom-select"
