Fix tests: async is deprecated

--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -152,7 +152,7 @@
                                 <option value="date"
                                         i18n>Datum</option>
                                 <option value="datetime-local"
-                                        i18n>Datum & Uhrzeit</option>
+                                        i18n>Datum &amp; Uhrzeit</option>
                                 <option value="email"
                                         i18n>E-Mail</option>
                                 <option value="month"
