search templates, typeahead Module

--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -84,18 +84,36 @@
                                 i18n>Template</label>
                         <input type="text"
                                 class="form-control"
+                                id="searchtemplate"
+                                name="searchtemplate"
+                                [(ngModel)]="searchText"
+                                [typeahead]="templateList"
+                                [typeaheadScrollable]="true"
+                                [typeaheadOptionsInScrollableView]="5"
+                                typeaheadOptionField="title"
+                                (typeaheadOnSelect)="setTemplate($event)"
+                                (keyup)="fetchTemplates()"
+                                i18n-placeholder placeholder="Suchen">
+                    </div>
+                    <!-- <div class="form-group">
+                        <label for="searchtemplate"
+                                i18n>Template</label>
+                        <input type="text"
+                                class="form-control"
                                 list="templateList"
                                 [(ngModel)]="searchText"
-                                (change)="fetchTemplates($event.target.value)"
+                                (keyup)="fetchTemplates($event.target.value)"
                                 id="searchtemplate"
                                 name="searchtemplate"
                                 i18n-placeholder placeholder="Suchen">
-                    
+                        <div *ngFor="let templ of storage.templateList; index as i">
+                            <p>{{ templ.title }}</p>
+                        </div>
                         <datalist id="templateList">
                                 <option *ngFor="let templ of storage.templateList; index as i"
                                     value="{{ templ.title }}"></option>
                         </datalist>
-                    </div>
+                    </div> -->
 
                     <!-- tags -->
                     <power-tagbox [(tagList)]="tagList"
